# hydrosat-field-monitoring

./: README.md
hydrosat-assignment/: Makefile  README.md  field_analysis.ipynb  pyproject.toml  valid_sentinel_partitions.txt
hydrosat-assignment/iac/: QUICK_START.md  README.md
hydrosat-assignment/iac/docker/: Dockerfile  docker-compose.yml
hydrosat-assignment/iac/k8s/: dagster-configmap.yaml  dagster-secret.yaml
hydrosat-assignment/iac/k8s/helm/dagster/: values.yaml
hydrosat-assignment/iac/scripts/: config.sh  k8s-init.sh  k8s-start.sh  k8s-stop.sh  k8s-update.sh  s3-load.sh
hydrosat-assignment/iac/terraform/: Makefile  main.tf  variables.tf
hydrosat-assignment/sample_data/s3/raw_catalog/bbox/staging/: bbox.geojson
hydrosat-assignment/src/plantation_monitoring/: assets.py  definitions.py  storage.py
hydrosat-assignment/src/plantation_monitoring/api/: __init__.py  run_stac_api.py  stac_api.py
hydrosat-assignment/src/plantation_monitoring/config/: constants.py
hydrosat-assignment/src/plantation_monitoring/connectors/: s3_client.py  settings.py  stac_client.py
hydrosat-assignment/src/plantation_monitoring/geospatial/: __init__.py  raster_ops.py  stac_ops.py  stac_publisher.py
hydrosat-assignment/src/plantation_monitoring/models/: models.py
hydrosat-assignment/src/plantation_monitoring/triggers/: jobs.py  s3_file_sensor.py
hydrosat-assignment/tests/: test_assets_helpers.py  test_connectors.py  test_raster_ops.py  test_s3_file_sensor_triggers.py  test_storage.py
(+1 files in other folders)
