[project]
name = "hydrosat-field-monitoring"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
  "dagster==1.10.12",
  "dagster-aws==0.26.12",
  "dagster-k8s==0.26.12",
  "dagster-postgres==0.26.12",
  "geopandas==1.0.1",
  "jsonpath-ng==1.7.0",
  "numpy==2.2.5",
  "pandas==2.2.3",
  "pyarrow>=14.0.0",
  "pystac-client==0.8.6",
  "planetary-computer>=0.4.0",
  "rasterio==1.4.3",
  "shapely==2.1.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.10.12",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.7",
]
notebook = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.dagster]
module_name = "plantation_monitoring.definitions"
code_location_name = "plantation_monitoring"
